# tsecon

./: .coveragerc  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-APACHE  README.md  ROADMAP.md  THIRD-PARTY-LICENSES.md  mkdocs.yml  rust-toolchain.toml
bindings/python/: Cargo.toml  LICENSE-MIT  README.md  pyproject.toml  tsecon.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_backtest.py  test_check_series.py  test_coint_regime.py  test_cv_splits.py  test_datasets.py  test_datasets_offline.py  test_depth.py  test_dynamic_ns.py  test_favar.py  test_frontier.py  test_gmm.py  test_gmm_nonlinear.py  test_ident_tranche1.py  test_ident_tranche2a.py  test_ident_tranche2b.py  test_intervals.py  test_lp_ml.py  test_lp_multiplier.py  test_lp_state.py  test_mean_group_var.py  test_midas_mgarch.py  test_ml_paths.py  test_new_crates.py  test_nongaussian_svar.py  test_panel_fceval.py  test_pmg_news.py  test_predreg.py  test_realized_extras.py  test_replication_ramey_zubairy.py  test_replication_yield_curve.py  test_results_arima.py  test_results_check.py  test_results_dsge.py  test_results_edge_cases.py  test_results_garch.py  test_results_lp.py  test_results_predreg.py  test_results_var.py  test_roadmap_gaps.py  test_smoke.py  (+7 more)
crates/tsecon-arima/: Cargo.toml
crates/tsecon-arima/src/: diff.rs  error.rs  estimate.rs  lib.rs  results.rs  spec.rs  ssm.rs
crates/tsecon-arima/tests/: golden.rs  properties.rs
crates/tsecon-bayes/: Cargo.toml
crates/tsecon-bayes/src/: convergence.rs  dense.rs  error.rs  ffbs.rs  hierarchical.rs  lib.rs  niw.rs  ssvs.rs
crates/tsecon-bayes/tests/: golden.rs  hierarchical.rs  properties.rs  ssvs.rs
crates/tsecon-bootstrap/: Cargo.toml
crates/tsecon-bootstrap/src/: blocklength.rs  error.rs  lib.rs  replicate.rs  schemes.rs  wild.rs
crates/tsecon-bootstrap/tests/: properties.rs  reproducibility.rs
crates/tsecon-breaks/: Cargo.toml
crates/tsecon-breaks/src/: bai.rs  cdf.rs  check.rs  dp.rs  error.rs  lib.rs  segments.rs  supf.rs  tables.rs
crates/tsecon-breaks/tests/: golden.rs  properties.rs  validation.rs
crates/tsecon-coint/: Cargo.toml
crates/tsecon-coint/src/: critvals.rs  engle_granger.rs  error.rs  johansen.rs  lib.rs  linalg.rs  vecm.rs
crates/tsecon-coint/tests/: golden.rs  properties.rs
crates/tsecon-connect/: Cargo.toml
crates/tsecon-connect/src/: error.rs  gfevd.rs  lib.rs  rolling.rs  table.rs
crates/tsecon-connect/tests/: golden.rs  properties.rs
crates/tsecon-diag/: Cargo.toml
crates/tsecon-diag/src/: acf.rs  arch.rs  error.rs  lib.rs  mackinnon.rs  mackinnon_ext.rs  normality.rs  ols.rs  phillips.rs  portmanteau.rs  report.rs  unitroot.rs  validate.rs
crates/tsecon-diag/tests/: golden.rs  phillips_golden.rs  phillips_properties.rs  properties.rs  unitroot_golden.rs  unitroot_properties.rs
crates/tsecon-dsge/: Cargo.toml
crates/tsecon-dsge/src/: error.rs  lib.rs  model.rs  simulate.rs  solve.rs
crates/tsecon-dsge/tests/: golden.rs  properties.rs
crates/tsecon-favar/: Cargo.toml
crates/tsecon-favar/src/: criteria.rs  error.rs  favar.rs  lib.rs  pca.rs
crates/tsecon-favar/tests/: golden.rs  properties.rs
crates/tsecon-filters/: Cargo.toml
crates/tsecon-filters/src/: bandpass.rs  decomposition.rs  error.rs  hamilton.rs  hp.rs  lib.rs
crates/tsecon-filters/tests/: golden.rs  properties.rs
crates/tsecon-forecast/: Cargo.toml
crates/tsecon-forecast/src/: accuracy.rs  backtest.rs  benchmarks.rs  comparison.rs  cw.rs  dm.rs  error.rs  gw.rs  hac.rs  lib.rs  theta.rs  validate.rs
crates/tsecon-forecast/tests/: backtest.rs  golden.rs  predability.rs  properties.rs
crates/tsecon-funcshock/: Cargo.toml
crates/tsecon-funcshock/src/: error.rs  flp.rs  fpca.rs  fvar.rs  lib.rs  scenario.rs
crates/tsecon-funcshock/tests/: golden.rs  properties.rs  validation.rs
crates/tsecon-garch/: Cargo.toml
crates/tsecon-garch/src/: error.rs  inference.rs  lib.rs  model.rs  objective.rs  recursion.rs  results.rs  spec.rs
crates/tsecon-garch/tests/: golden.rs  properties.rs
crates/tsecon-gas/: Cargo.toml
crates/tsecon-gas/src/: error.rs  kernel.rs  lib.rs  model.rs  results.rs
crates/tsecon-gas/tests/: golden.rs  properties.rs
crates/tsecon-gmm/: Cargo.toml
crates/tsecon-gmm/src/: error.rs  lib.rs  linear.rs  matrix.rs  nonlinear.rs
crates/tsecon-gmm/tests/: golden.rs  properties.rs
crates/tsecon-hac/: Cargo.toml
crates/tsecon-hac/src/: error.rs  ewc.rs  kernel.rs  lib.rs  lrv.rs  ols.rs  validate.rs
crates/tsecon-hac/tests/: golden.rs  properties.rs
crates/tsecon-ident/: Cargo.toml
crates/tsecon-ident/src/: error.rs  fry_pagan.rs  haar.rs  hetero.rs  histdecomp.rs  lib.rs  long_run.rs  max_share.rs  narrative.rs  nongaussian.rs  proxy.rs  robust_bounds.rs  sampler.rs  shocks.rs  sign.rs  structural_fevd.rs  summary.rs  zero.rs  zero_sampler.rs
crates/tsecon-ident/tests/: dgp_validation.rs  fry_pagan.rs  haar.rs  hetero.rs  historical_decomposition.rs  long_run.rs  max_share.rs  nongaussian.rs  proxy.rs  sign.rs  structural_fevd.rs  zero_sign.rs
crates/tsecon-longmemory/: Cargo.toml
crates/tsecon-longmemory/src/: error.rs  fracdiff.rs  gph.rs  lib.rs  spectral.rs  whittle.rs
crates/tsecon-longmemory/tests/: golden.rs  properties.rs
crates/tsecon-lp/: Cargo.toml
crates/tsecon-lp/src/: design.rs  error.rs  iv.rs  level.rs  lib.rs  smooth.rs  spec.rs  state.rs
crates/tsecon-lp/tests/: golden.rs  properties.rs  smooth_golden.rs  smooth_properties.rs  validation.rs
crates/tsecon-mgarch/: Cargo.toml
crates/tsecon-mgarch/src/: ccc.rs  dcc.rs  error.rs  lib.rs  stage.rs  util.rs
crates/tsecon-mgarch/tests/: mgarch.rs
crates/tsecon-midas/: Cargo.toml
crates/tsecon-midas/src/: design.rs  error.rs  lib.rs  umidas.rs  weighted.rs  weights.rs
crates/tsecon-midas/tests/: golden.rs  (+2 more)
crates/tsecon-ml/: Cargo.toml
crates/tsecon-nowcast/: Cargo.toml
crates/tsecon-optim/: Cargo.toml
crates/tsecon-panel/: Cargo.toml
crates/tsecon-panelroot/: Cargo.toml
crates/tsecon-panelts/: Cargo.toml
(+444 files in other folders)
