[workspace]
resolver = "2"
members = [
    "crates/tsecon-rng",
    "crates/tsecon-stats",
    "crates/tsecon-linalg",
    "crates/tsecon-bootstrap",
    "crates/tsecon-diag",
    "crates/tsecon-hac",
    "crates/tsecon-optim",
    "crates/tsecon-arima",
    "crates/tsecon-garch",
    "crates/tsecon-var",
    "crates/tsecon-filters",
    "crates/tsecon-forecast",
    "crates/tsecon-bayes",
    "crates/tsecon-panel",
    "crates/tsecon-ml",
    "crates/tsecon-lp",
    "crates/tsecon-ident",
    "crates/tsecon-coint",
    "crates/tsecon-regime",
    "crates/tsecon-midas",
    "crates/tsecon-mgarch",
    "crates/tsecon-spectral",
    "crates/tsecon-realized",
    "crates/tsecon-connect",
    "crates/tsecon-favar",
    "crates/tsecon-gmm",
    "crates/tsecon-termstructure",
    "crates/tsecon-ssm",
    "crates/tsecon-gas",
    "crates/tsecon-nowcast",
    "crates/tsecon-panelts",
    "crates/tsecon-predreg",
    "crates/tsecon-recession",
    "crates/tsecon-survey",
    "crates/tsecon-longmemory",
    "crates/tsecon-spectest",
    "crates/tsecon-dsge",
    "crates/tsecon-quantile",
    "crates/tsecon-funcshock",
    "crates/tsecon-breaks",
    "crates/tsecon-panelroot",
    "bindings/python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "thin"
