[package]
name = "tsecon-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "tsecon"
crate-type = ["cdylib"]

[dependencies]
tsecon-rng = { path = "../../crates/tsecon-rng" }
tsecon-stats = { path = "../../crates/tsecon-stats" }
tsecon-diag = { path = "../../crates/tsecon-diag" }
tsecon-bootstrap = { path = "../../crates/tsecon-bootstrap" }
pyo3 = { version = "0.29.0", features = ["abi3-py39"] }
numpy = "0.29.0"
