[package]
name = "tsecon-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "tsecon"
crate-type = ["cdylib"]

[dependencies]
tsecon-rng = { path = "../../crates/tsecon-rng" }
tsecon-stats = { path = "../../crates/tsecon-stats" }
tsecon-diag = { path = "../../crates/tsecon-diag" }
tsecon-bootstrap = { path = "../../crates/tsecon-bootstrap" }
tsecon-ssm = { path = "../../crates/tsecon-ssm" }
tsecon-hac = { path = "../../crates/tsecon-hac" }
tsecon-var = { path = "../../crates/tsecon-var" }
tsecon-filters = { path = "../../crates/tsecon-filters" }
tsecon-forecast = { path = "../../crates/tsecon-forecast" }
tsecon-garch = { path = "../../crates/tsecon-garch" }
tsecon-bayes = { path = "../../crates/tsecon-bayes" }
tsecon-arima = { path = "../../crates/tsecon-arima" }
tsecon-lp = { path = "../../crates/tsecon-lp" }
tsecon-ml = { path = "../../crates/tsecon-ml" }
tsecon-ident = { path = "../../crates/tsecon-ident" }
tsecon-panel = { path = "../../crates/tsecon-panel" }
tsecon-spectral = { path = "../../crates/tsecon-spectral" }
tsecon-coint = { path = "../../crates/tsecon-coint" }
tsecon-regime = { path = "../../crates/tsecon-regime" }
tsecon-mgarch = { path = "../../crates/tsecon-mgarch" }
tsecon-midas = { path = "../../crates/tsecon-midas" }
tsecon-realized = { path = "../../crates/tsecon-realized" }
tsecon-connect = { path = "../../crates/tsecon-connect" }
tsecon-favar = { path = "../../crates/tsecon-favar" }
tsecon-termstructure = { path = "../../crates/tsecon-termstructure" }
tsecon-gmm = { path = "../../crates/tsecon-gmm" }
tsecon-gas = { path = "../../crates/tsecon-gas" }
tsecon-nowcast = { path = "../../crates/tsecon-nowcast" }
tsecon-panelts = { path = "../../crates/tsecon-panelts" }
tsecon-predreg = { path = "../../crates/tsecon-predreg" }
pyo3 = { version = "0.29.0", features = ["abi3-py39"] }
numpy = "0.29.0"
