[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "tsecon"
version = "0.0.1"
description = "High-performance time series econometrics (Rust core) — working codename"
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tsecon"
manifest-path = "Cargo.toml"
