[package]
name = "tsecon-favar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Approximate factor models and the two-step FAVAR (Bernanke-Boivin-Eliasz 2005) for the tsecon time-series econometrics library: PCA factor extraction via SVD, Bai-Ng (2002) and Ahn-Horenstein (2013) factor-number criteria, the slow/fast factor rotation, and impulse responses of the estimated factor VAR mapped back onto every observed series through the loadings"

[dependencies]
# faer is consumed through the tsecon-linalg re-export so the whole
# workspace shares one pinned version (0.24, default-features = false,
# features = ["std"]). tsecon-var supplies the factor VAR and its IRFs.
tsecon-linalg = { path = "../tsecon-linalg" }
tsecon-var = { path = "../tsecon-var" }

[dev-dependencies]
# float_roundtrip: fixture doubles must parse to the exact bit pattern NumPy
# printed, not serde_json's default 1-ulp fast path.
serde_json = { version = "1", features = ["float_roundtrip"] }
