[package]
name = "tsecon-forecast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Forecast evaluation for the tsecon time-series econometrics library: point accuracy measures (ME/MSE/RMSE/MAE/MdAE/MAPE/sMAPE/MASE/RMSSE), the Diebold-Mariano test with the Harvey-Leybourne-Newbold small-sample correction, the benchmark zoo (naive, seasonal naive, drift, historical mean, Theta) with analytic prediction intervals, and a teaching forecast-comparison report"

[dependencies]
tsecon-stats = { path = "../tsecon-stats" }
# The single HAC / long-run-variance engine (ROADMAP §5): the Clark-West and
# Giacomini-White tests take their Bartlett long-run variances from here so
# identical settings never produce different p-values across modules.
tsecon-hac = { path = "../tsecon-hac" }

[dev-dependencies]
# float_roundtrip: fixture doubles must parse to the exact bit pattern NumPy
# printed, not serde_json's default 1-ulp fast path.
serde_json = { version = "1", features = ["float_roundtrip"] }
