[package]
name = "tsecon-mgarch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Multivariate (conditional-correlation) GARCH for the tsecon time-series econometrics library: constant conditional correlation (Bollerslev 1990) and dynamic conditional correlation (Engle 2002), two-step estimation delegating the per-series volatilities to tsecon-garch, correlation-targeted Qbar, positive-definiteness hygiene via tsecon-linalg, and analytic multi-step covariance forecasting for CCC"

[dependencies]
# faer is consumed through the tsecon-linalg re-export so the whole
# workspace shares one pinned version.
tsecon-linalg = { path = "../tsecon-linalg" }
tsecon-garch = { path = "../tsecon-garch" }
tsecon-optim = { path = "../tsecon-optim" }

[dev-dependencies]
# float_roundtrip: fixture doubles must parse to the exact bit pattern NumPy
# printed, not serde_json's default 1-ulp fast path.
serde_json = { version = "1", features = ["float_roundtrip"] }
